# dirt

./: CMakeLists.txt  COPYING  README.md  dirt.cpp  dirt.h  timestamp.sh
src/: cmdline.h  deconvolv.cpp  deconvolv.h  dirt.cpp  dirt.h  jack.cpp  jack.h  miscjunk.cpp  ui.cpp  ui.h
src/wxwidgets/: dirt-gui.pjd  dirt-gui.pjd-wtf  dirt-gui.pjd.bak  mainwindow.cpp  mainwindow.h
test/: CMakeCache.txt  Makefile  cmake_install.cmake  dirt  testreverb.  testsweep-reverb.pk
